Fix layout issue causing horizontal scrollbar to appear

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
   color: #213547;
   background-color: #ffffff;
 
+  box-sizing: border-box;
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
